--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObjectManager.h" />
+    <ClInclude Include="GameUtils.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="PlayerTank.h" />
     <ClInclude Include="SplashScreen.h" />
@@ -95,6 +96,7 @@
     <ClInclude Include="VisibleGameObject.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GameUtils.cpp" />
     <ClCompile Include="MainApp.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
