--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -89,9 +89,11 @@
     <ClInclude Include="GameUtils.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="PlayerTank.h" />
+    <ClInclude Include="Point.h" />
     <ClInclude Include="SplashScreen.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Tank.h" />
+    <ClInclude Include="TankLight.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VisibleGameObject.h" />
   </ItemGroup>
@@ -108,6 +110,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Tank.cpp" />
+    <ClCompile Include="TankLight.cpp" />
     <ClCompile Include="VisibleGameObject.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
